--- a/inst/doc/LiebermanAidenHiC2009.bib
+++ b/inst/doc/LiebermanAidenHiC2009.bib
@@ -8,3 +8,11 @@
    Pages="289--293"
 }
 
+@Article{ENCODE2004,
+   Author="The ENCODE Project Consortium",
+   Title="{{T}he ENCODE (ENCylopedia Of DNA Elements) Project}",
+   Journal="Science",
+   Year="2004",
+   Volume="306",
+   Pages="636--640"
+}
