removed extra closing bracket from vignette title
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/LiebermanAidenHiC2009@2061 db2202da-8704-0410-b924-b125b3cd84ef

--- a/inst/doc/LiebermanAidenHiC2009.Rnw
+++ b/inst/doc/LiebermanAidenHiC2009.Rnw
@@ -1,4 +1,4 @@
-%\VignetteIndexEntry{Exploration of HiC data}}
+%\VignetteIndexEntry{Exploration of HiC data}
 %\VignettePackage{LiebermanAidenHiC2009}
 
 % To compile this document
